# tts-preparation

./: .gitignore  Pipfile  README.md  cli.py  dependencies.md  select_mos_utterances.py  setup.cfg  setup.py
examples/chn/: north.txt  north_wiki.txt  thchs.txt
examples/en/: arthur.txt  coma.txt  democritus.txt  democritus_acc.txt  grandfather.txt  north.txt  rainbow.txt  stella.txt  test_sents.txt  wolf.txt
examples/en/ARPA/: north.txt  north_stress_0.txt  north_stress_1.txt  north_stress_2.txt
examples/ger/: example.txt  nord.txt
examples/ipa/: north_broad.txt  north_broad_cmu.txt  north_broad_cmu_deviant.txt  north_cmudict.txt  north_ger.txt  north_libri.txt  north_libri_variant.txt  north_narrow.txt  north_narrow_cmu.txt  north_narrow_cmu_deviant.txt  north_sven.txt  north_sven_acc.txt  thchs.txt
maps/inference/: chn_ipa.json  chn_ipa.symbols  eng_ipa.json
maps/weights/: ljs_ipa_thchs_ipa.json  thchs_ipa_acc_ljs_ipa.json  thchs_ljs_ipa_ljs_ipa.json  thchs_ljs_ipa_ljs_ipa.symbols
src/: cli.py
src/debug/: globals.py
src/debug/app/: inference.py  mapping.py  merge_ds.py  prepare.py
src/debug/app/old/: inference.py  merge_ds.old.py  prepare.py
src/tests/: test_merge_ds.py
src/tts_preparation/: __init__.py  globals.py  utils.py
src/tts_preparation/app/: __init__.py  export.py  inference.py  io.py  mapping.py  merge_ds.py  prepare.py
src/tts_preparation/core/: __init__.py  data.py  dummy_sentence2pronunciation.py  helper.py  inference.py  inference.tests.py  inference2.py  inference_transcribe_arpa.py  merge_ds.old.py  merge_ds.py  merge_ds.tests.py  merge_ds2.py  prepare.py  stats_lvl2.py  stats_speaker.py  stats_symbols.py
src/tts_preparation_tests/: test_inference.py
tts_preparation/: __init__.py  globals.py  utils.py
tts_preparation/app/: __init__.py  io.py  mapping.py  merge_ds.py  prepare.py  prepare2.py
tts_preparation/core/: data.py  extraction_methods.py  greedy_kld.py  helper.py  inference.py  main.py  main2.py  merge_ds.py  merge_ds.tests.py  prepare.py  prepare2.py  stats.py  stats_speaker.py  stats_symbols.py
