[metadata]
name = tts_preparation
version = 1.0.0
author="Stefan Taubert"
author_email="stefan.taubert@posteo.de"
description="Utils for text-to-speech preparation."
long_description = file: README.md
long_description_content_type = text/markdown
url = https://github.com/stefantaubert/tts-preparation.git
classifiers =
    Programming Language :: Python :: 3
    License :: OSI Approved :: MIT License
    Operating System :: OS Independent

[options]
package_dir =
    = src
packages = find:
python_requires = >=3.8
install_requires =
    pandas
    matplotlib
    tqdm
    numpy
    Unidecode
    torch<=1.7.1
    cmudict_parser@git+https://github.com/stefantaubert/cmudict-parser.git@master
    text_utils@git+https://github.com/stefantaubert/text-utils.git@master
    audio_utils@git+https://github.com/stefantaubert/audio-utils.git@master
    image_utils@git+https://github.com/stefantaubert/image-utils.git@master
    speech_dataset_parser@git+https://github.com/stefantaubert/speech-dataset-parser.git@master
    speech_dataset_preprocessing@git+https://github.com/stefantaubert/speech-dataset-preprocessing.git@master
    text_selection@git+https://github.com/stefantaubert/text-selection.git@master

[options.packages.find]
where = src
