[metadata]
name = tts_preparation
version = 1.0.0
author="Stefan Taubert"
author_email="stefan.taubert@posteo.de"
description="Utils for text-to-speech preparation."
long_description = file: README.md
long_description_content_type = text/markdown
url = https://github.com/stefantaubert/tts-preparation.git
classifiers =
    Programming Language :: Python :: 3
    License :: OSI Approved :: MIT License
    Operating System :: OS Independent

[options]
package_dir =
    = src
packages = find:
python_requires = >=3.8
install_requires =
    pandas
    tqdm
    numpy

[options.packages.find]
where = src
